Fix/minor fixes 21 (#1382)
* Add connector disabled message

* Fix new project not showing sidebar content

--- a/apps/base/styles/components/_widget_card.scss
+++ b/apps/base/styles/components/_widget_card.scss
@@ -99,6 +99,7 @@ gy-widget {
 
   &__form {
     flex: 1 1 0%;
+    gap: 0;
     overflow: hidden;
   }
 
